30-tools/matomo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: matomo.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
  tls:
    - hosts:
        - matomo.check-consulting.net
      secretName: matomo-tls
